Upgrade Maven dependencies to their latest version